# gfx-d

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  README.md  dscanner.ini  dub.json  file_hashes.json  gfx.html  index.html  make_doc.sh  meson.build  meson_options.txt  sitemap.xml  symbols.js
.github/workflows/: ci.yml
bindings/: dub.json
bindings/gldgen/: gldgen.py  gldgen.sh
bindings/vkdgen/: vkdgen.py
core/: dub.json  meson.build
core/source/gfx/core/: log.d  package.d  rc.d  typecons.d  util.d
core/source/gfx/priv/: datetimeformat.d
decl/: dub.json  meson.build
decl/source/gfx/decl/: engine.d  package.d  store.d
decl/source/gfx/decl/sdlang/: exception.d  lexer.d  package.d  parser.d  taggedalgebraic.d  token.d
desc/: dub.json
docbld/: dub.json
examples/: gen_example_spirv.sh  meson.build
examples/common/: example.d
examples/crate/: dub.json
examples/crate/shaders/: 330-crate.f.glsl  330-crate.v.glsl
examples/crate/source/: crate.d
examples/crate/views/: shader.frag
examples/declapi/: dub.json  meson.build
examples/declapi/source/: declapi.d
examples/declapi/views/: pipeline.sdl  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
examples/deferred/: dub.json  meson.build
examples/deferred/source/: buffer.d  deferred.d  pipeline.d  scene.d
examples/deferred/views/: blend.frag  blend.frag.spv  bloom.frag  bloom.frag.spv  bloom.vert  bloom.vert.spv  bulb.frag  bulb.frag.spv  bulb.vert  bulb.vert.spv  geom.frag  geom.frag.spv  geom.vert  geom.vert.spv  light.frag  light.frag.spv  light.vert  light.vert.spv  toneMap.frag  toneMap.frag.spv  toneMap.vert  toneMap.vert.spv
examples/depth/: dub.json  meson.build
examples/depth/source/: depth.d
examples/descapi/: dub.json
examples/descapi/source/: descapi.d
examples/descapi/views/: pipeline.sdl
examples/highlevel/: dub.json
examples/highlevel/source/: highlevel.d
examples/lense/: dub.json  gfx-d_lense
examples/lense/shaders/: 330-blit.v.glsl  330-lense.f.glsl  330-lense.v.glsl
examples/lense/source/: lense.d
examples/shadow/: dub.json  meson.build
examples/shadow/shaders/: 330-mesh.f.glsl  330-mesh.v.glsl  330-shadow.f.glsl  330-shadow.v.glsl
examples/shadow/source/: shadow.d
examples/shadow/views/: mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  shadow.frag  shadow.frag.spv  shadow.vert  shadow.vert.spv
examples/stencil/: dub.json  meson.build
examples/stencil/shaders/: 330-stencil.f.glsl  330-stencil.v.glsl  330-triangle.f.glsl  330-triangle.v.glsl
examples/stencil/source/: stencil.d
examples/stencil/views/: solid.frag  solid.frag.spv  solid.vert  solid.vert.spv  stencil.frag  stencil.frag.spv  stencil.vert  stencil.vert.spv
examples/swapchain/: dub.json  meson.build
examples/swapchain/source/: swapchain.d
examples/texture/: dub.json
examples/texture/source/: texture.d
examples/texture/views/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
examples/triangle/: dub.json  meson.build
examples/triangle/shaders/: 130-triangle.f.glsl  130-triangle.v.glsl
examples/triangle/source/: triangle.d
examples/triangle/views/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
genmesh/: dub.json  meson.build
genmesh/source/gfx/genmesh/: algorithm.d  cube.d  package.d  poly.d
gfx/: core.html  gfxLogMask.html  gfxVersionMaj.html  gfxVersionMic.html  gfxVersionMin.html  gl3.html  graal.html  math.html  memalloc.html  vulkan.html  window.html
gfx/bindings/: core.html  vulkan.html
gfx/core/: gfxCoreLogMask.html  log.html  rc.html  typecons.html  util.html
gfx/decl/: engine.html  store.html
gfx/genmesh/: algorithm.html  cube.html  poly.html
gfx/gl3/: GlInstance.apiProps.html  GlInstance.backend.html  GlInstance.ctx.html  GlInstance.devices.html  GlInstance.dispose.html  GlInstance.html  GlInstance.rcDebug.html  GlInstance.rcLockShared.html  GlInstance.rcTypeName.html  GlInstance.refCountShared.html  GlInstance.releaseShared.html  GlInstance.retainShared.html  GlInstance.setDebugCallback.html  GlInstance.share.html  GlInstance.this.html  context.html  gfxGlLogMask.html  swapchain.html
gfx/graal/: ApiProps.html  ApiProps.name.html  ApiProps.ndc.html  Backend.html  DebugCallback.html  Instance.apiProps.html  Instance.backend.html  Instance.devices.html  Instance.html  Instance.setDebugCallback.html  Severity.html  buffer.html  cmd.html  device.html  error.html  format.html  image.html  memory.html  pipeline.html  presentation.html  (+4 more)
gl3/: ReadMe.txt  add-gl-exts.txt  dub.json  meson.build
gl3/source/gfx/bindings/opengl/: eglplatform.d  gl.d  glx.d  khrplatform.d  loader.d  package.d  util.d  wgl.d
gl3/source/gfx/gl3/: context.d  device.d  error.d  package.d  pipeline.d  queue.d  resource.d  swapchain.d
graal/: dub.json  meson.build
graal/source/gfx/: package.d
graal/source/gfx/graal/: buffer.d  cmd.d  device.d  error.d  format.d  image.d  memory.d  package.d  pipeline.d  queue.d  renderpass.d
math/: ReadMe.md  dub.json  meson.build
math/bench/: dub.json  glm.mk
math/bench/matmul/: dub.json
math/bench/matmul/source/: app.d
math/bench/source/: app.d  bench.d  glm.cc  matinv.d  matmul.d
math/source/gfx/math/: approx.d  inverse.d  mat.d  package.d  proj.d  quat.d  transform.d  util.d  vec.d
memalloc/: dub.json  meson.build
memalloc/source/gfx/memalloc/: allocator.d  dedicated.d  package.d  pool.d
script/: test_examples.sh
tools/: build_examples.sh  codegen.py  format.in.d  formatdata.py  formatgen.py
vulkan/: dub.json  meson.build
vulkan/source/gfx/bindings/vulkan/: loader.d  package.d  vk.d
vulkan/source/gfx/vulkan/: buffer.d  cmd.d  conv.d  device.d  image.d  memory.d  package.d  pipeline.d  queue.d  renderpass.d  wsi.d
vulkan/vkdgen/: vkdgen.sh
window/: dub.json  meson.build
window/resources/: gen_wld_protocol.sh
window/source/gfx/window/: keys.d  package.d  win32.d  xcb.d  xkeyboard.d
window/source/gfx/window/wayland/: package.d
window/source/gfx/window/win32/: context.d  keymap.d  package.d
window/source/gfx/window/xcb/: context.d  package.d
(+12217 files in other folders)
